Adds button to VRShell menu mode, which lets the user manually exit WebVR presentation. - Adds exit presentation button to the UI, which is shown in place of the back button when in WebVR presentation mode. - Clicking the button will send a command to native and native triggers presentation exit.

BUG=644784
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2784303002
Cr-Commit-Position: refs/heads/master@{#462542}

Former-commit-id: 5ca8b58d19df1aeb5d3f9e746a5d4b3f862e1087